--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^4.6.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "joi": "^17.3.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^5.11.12",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
