--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "bootstrap": "^4.6.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "formik": "^2.2.6",
     "joi": "^17.3.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
-    "mongoose": "^5.11.12",
+    "mongoose": "^5.11.15",
     "react": "^17.0.1",
     "react-async": "^10.0.1",
     "react-bootstrap": "^1.4.3",
@@ -30,7 +31,8 @@
     "react-spinners": "^0.10.4",
     "redux-thunk": "^2.3.0",
     "urlencode": "^1.1.0",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "yup": "^0.32.8"
   },
   "scripts": {
     "start": "react-scripts start",
