--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+/client/node_modules
 /.pnp
 .pnp.js
 .env
@@ -11,6 +12,7 @@
 
 # production
 /build
+/client/build
 
 # misc
 .DS_Store
@@ -22,4 +24,3 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
