--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,12 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+# server
 /node_modules
-/client/node_modules
-/.pnp
-.pnp.js
-.env
-
-# testing
-/coverage
-
-# production
 /build
-/client/build
-
-# misc
-.DS_Store
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+
+# client
+/client/node_modules
+/client/.eslintcache
+/client/build
